<resources>
    <string name="app_name">Movie Ratings App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movie__details">Movie Summary</string>
    <string name="story_heading">Short Story</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- App Preferences -->

    <!-- User Rating Category Choices -->
    <string name="pref_rating_choice_key">Rating Choice</string>
    <string name="pref_rating_choice_label">Rating Choice</string>
    <string name="pref_rating_choice_default">popular</string>

    <!-- User Video Category Choices -->
    <string name="pref_video_choice_key">Video Choice</string>
    <string name="pref_video_choice_label">Video Choice</string>
    <string name="pref_video_choice_default">movie</string>

</resources>
