<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListPreference
        android:key="@string/pref_rating_choice_key"
        android:defaultValue="@string/pref_rating_choice_default"
        android:title="@string/pref_rating_choice_label"
        android:entryValues="@array/Rating_Choice_Entry_Values"
        android:entries="@array/Rating_Choice_Entries" />

    <ListPreference
        android:key="@string/pref_video_choice_key"
        android:defaultValue="@string/pref_video_choice_default"
        android:title="@string/pref_video_choice_label"
        android:entryValues="@array/Video_Choice_Entry_Values"
        android:entries="@array/Video_Choice_Entries" />

</PreferenceScreen>